// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`holocronModule executeLoad should call load if present with props 1`] = `
Array [
  Array [
    "The 'load' function in holocron has been deprecated. Please use 'loadModuleData' instead.",
  ],
]
`;

exports[`holocronModule executeLoad should call load if present with props 2`] = `
Array [
  Array [
    Object {
      "myFakeProp": true,
    },
  ],
]
`;

exports[`holocronModule executeLoadModuleData should call loadModuleData if dispatch and loadModuleData are present 1`] = `
Array [
  Array [
    Object {
      "fetchClient": [MockFunction],
      "module": Object {
        "displayName": "FakeComponent",
      },
      "ownProps": Object {},
      "store": Object {
        "dispatch": [MockFunction] {
          "calls": Array [
            Array [
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getState": [MockFunction],
      },
    },
  ],
]
`;

exports[`holocronModule executeLoadingFunctions should have setState called with error when failure occurs 1`] = `"Error while attempting to call 'load' or 'loadModuleData' inside Holocron module FakeComponent."`;

exports[`holocronModule executeLoadingFunctions should not have setState called with error if mounted is false 1`] = `"Error while attempting to call 'load' or 'loadModuleData' inside Holocron module FakeComponent."`;

exports[`holocronModule should gracefully handle module state missing from store 1`] = `
<div>
  Mock Module 
  2
</div>
`;

exports[`holocronModule should pass mergeProps to connect if it is specified 1`] = `
<div>
  3
   * 
  4
   = 
  12
</div>
`;

exports[`holocronModule should pass the moduleLoadStatus prop as error when it failed to load 1`] = `
<div>
  Mock Module - 
  error
</div>
`;

exports[`holocronModule should pass the moduleLoadStatus prop as loaded when loaded 1`] = `
<div>
  Mock Module - 
  loaded
</div>
`;

exports[`holocronModule should pass the moduleLoadStatus prop as loading when loading 1`] = `
<div>
  Mock Module - 
  loading
</div>
`;

exports[`holocronModule should provide the module state as a plain JS prop if a reducer is provided 1`] = `
<div>
  value
</div>
`;

exports[`holocronModule should warn if a reducer is set but no name 1`] = `
Array [
  Array [
    "Holocron Config API requires a 'name' when a 'reducer' is set for Module HolocronModule(undefined).",
  ],
]
`;

exports[`holocronModule should wrap module if no arguments are provided 1`] = `
<div>
  Mock Module
</div>
`;
